# visualizations

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  render.yaml
configs/mcp/: rest.yaml  sql.yaml
src/visualizations/: __init__.py
src/visualizations/app/: main.py
src/visualizations/app/pages/: home.py
src/visualizations/data/: mcp_client.py
tests/: test_smoke.py
